{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 35,
  "lineage": "42c90e44-e56a-82fb-9d67-b3e2c7990eee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpro-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:internet-gateway/igw-04c19b8d70bd57260",
            "id": "igw-04c19b8d70bd57260",
            "owner_id": "829154600865",
            "tags": {
              "Name": "vpro-IGW"
            },
            "tags_all": {
              "Name": "vpro-IGW"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpro-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:route-table/rtb-0baa67bdecc64d070",
            "id": "rtb-0baa67bdecc64d070",
            "owner_id": "829154600865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c19b8d70bd57260",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpro-pub-RT"
            },
            "tags_all": {
              "Name": "vpro-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpro-IGW",
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpro-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082afbb2fd57103a5",
            "route_table_id": "rtb-0baa67bdecc64d070",
            "subnet_id": "subnet-04c39a7f7c9f8d40f"
          },
          "dependencies": [
            "aws_internet_gateway.vpro-IGW",
            "aws_route_table.vpro-pub-RT",
            "aws_subnet.vpro-pub-1",
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpro-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da12f8a08a60391f",
            "route_table_id": "rtb-0baa67bdecc64d070",
            "subnet_id": "subnet-0504e65e9a0b4163f"
          },
          "dependencies": [
            "aws_internet_gateway.vpro-IGW",
            "aws_route_table.vpro-pub-RT",
            "aws_subnet.vpro-pub-2",
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpro-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d71a7a89e35d4e5",
            "route_table_id": "rtb-0baa67bdecc64d070",
            "subnet_id": "subnet-0e8e4141312682e70"
          },
          "dependencies": [
            "aws_internet_gateway.vpro-IGW",
            "aws_route_table.vpro-pub-RT",
            "aws_subnet.vpro-pub-3",
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpro-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:security-group/sg-069bf32b6abd17bea",
            "description": "vpro-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069bf32b6abd17bea",
            "ingress": [
              {
                "cidr_blocks": [
                  "61.70.211.16/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpro-sg",
            "name_prefix": "",
            "owner_id": "829154600865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpro-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:subnet/subnet-03741466a4eed340f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03741466a4eed340f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829154600865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpro-priv-1"
            },
            "tags_all": {
              "Name": "vpro-priv-1"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpro-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:subnet/subnet-0ee0f3ba4effead93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee0f3ba4effead93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829154600865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpro-priv-2"
            },
            "tags_all": {
              "Name": "vpro-priv-2"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpro-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:subnet/subnet-02af3d9748e47d621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02af3d9748e47d621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829154600865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpro-priv-3"
            },
            "tags_all": {
              "Name": "vpro-priv-3"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpro-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:subnet/subnet-04c39a7f7c9f8d40f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c39a7f7c9f8d40f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829154600865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpro-pub-1"
            },
            "tags_all": {
              "Name": "vpro-pub-1"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpro-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:subnet/subnet-0504e65e9a0b4163f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0504e65e9a0b4163f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829154600865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpro-pub-2"
            },
            "tags_all": {
              "Name": "vpro-pub-2"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpro-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:subnet/subnet-0e8e4141312682e70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8e4141312682e70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829154600865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpro-pub-3"
            },
            "tags_all": {
              "Name": "vpro-pub-3"
            },
            "vpc_id": "vpc-0f7d7651ac3df6e8f"
          },
          "dependencies": [
            "aws_vpc.vpro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpro-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:829154600865:vpc/vpc-0f7d7651ac3df6e8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef763f9bc1cc344b",
            "default_route_table_id": "rtb-0c778291872d6ad2a",
            "default_security_group_id": "sg-07fed53f0aac5a76d",
            "dhcp_options_id": "dopt-0b5f7b3f141ff79bc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7d7651ac3df6e8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c778291872d6ad2a",
            "owner_id": "829154600865",
            "tags": {
              "Name": "vprofile"
            },
            "tags_all": {
              "Name": "vprofile"
            }
          }
        }
      ]
    }
  ]
}